# screenlogs

./: .gitignore  Cargo.toml  README.md
api/: index.js  package.json
src/: main.rs
tauri-app/: package.json
tauri-app/src/: App.tsx
tauri-app/src-tauri/: Cargo.toml
tauri-app/src-tauri/src/: main.rs
