[package]
name = "my-first-rust-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = "1.7.2"
mac_address = "1.1.5"
multipart = "0.18.0"
reqwest = { version = "0.11.18", features = ["blocking", "multipart"]}
screenshots = "0.6.0"
ureq = "2.6.2"
